--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,5 @@
 # See simple_shell/simple_shell.authors.sh to make modifications.
 
 
-Akwaowo Mbo - Owner <akwaowombo@gmail.com>
+Akwaowo Mbo - Owners <akwaowombo@gmail.com> 
+Santa Tilahun -  <santashewamene@gmail.com>
